@@ -1,26 +1,22 @@
-package com.nbicocchi.exercises.nio;
+package com.nbicocchi.exercises.nio.b;
 
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class _FileList {
     public static Set<String> fileList(String src) throws IOException {
-        Path srcPath = Path.of(src);
-
-        //  --- 'src' parameter control should be added ---
-        //  if(Files.isDirectory(srcPath))
-
-        try (Stream<Path> subtree = Files.list(srcPath)) {
-
-            return subtree
-                    .filter(itemFIle -> !Files.isDirectory(itemFIle))
+        try (Stream<Path> subtreeStream = Files.list(Paths.get(src))) {
+            return subtreeStream
+                    .filter(Files::isDirectory)
                     .map(Path::getFileName)
-                    .map(Object::toString)
+                    .map(Path::toString)
                     .collect(Collectors.toSet());
         }
+
     }
 }
